Fix alignment issue with tiles

--- a/dark_theme.css
+++ b/dark_theme.css
@@ -124,6 +124,7 @@ li          {   list-style: none;
 
 #gallery		{	display: flex;
 					justify-content: space-around;
+					justify-content: center;
 }
 .mobile_div			{	display: inline-block;}
 .download_cv		{	background-color: #018f23;
